Fix tab issue in generated CLI files (#44)
