# examples/addressbook/openapi.yaml
@@ -24,6 +24,11 @@ components:
         country:
           description: The country of this address
           type: string
+        people:
+          description: A list of people's names living there
+          items:
+            type: string
+          type: array
         person:
           $ref: '#/components/schemas/person'
         state:
@@ -227,6 +232,11 @@ paths:
                   country:
                     description: The country of this address
                     type: string
+                  people:
+                    description: A list of people's names living there
+                    items:
+                      type: string
+                    type: array
                   person:
                     description: This is a person object that lives at this address.
                     schema:
@@ -551,6 +561,92 @@ paths:
           description: Response for OK
       tags:
       - addressbook
+  /addressbook/{address_key}/people:
+    delete:
+      description: delete operation for /addressbook/{address_key}/people
+      operationId: addressbook_address_key_people_delete
+      parameters:
+      - in: path
+        name: address_key
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema: &id007
+                description: A list of people's names living there
+                items:
+                  type: string
+                type: array
+          description: Response for OK
+      tags:
+      - addressbook
+    get:
+      description: get operation for /addressbook/{address_key}/people
+      operationId: addressbook_address_key_people_get
+      parameters:
+      - description: Filter by city name
+        in: query
+        name: city
+        required: false
+        schema:
+          type: string
+      - in: path
+        name: address_key
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema: *id007
+          description: Response for OK
+      tags:
+      - addressbook
+    head:
+      description: head operation for /addressbook/{address_key}/people
+      operationId: addressbook_address_key_people_head
+      parameters:
+      - in: path
+        name: address_key
+        required: true
+        schema:
+          type: string
+      responses:
+        default:
+          description: Default HEAD response
+      tags:
+      - addressbook
+    put:
+      description: put operation for /addressbook/{address_key}/people
+      operationId: addressbook_address_key_people_put
+      parameters:
+      - in: path
+        name: address_key
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              description: A list of people's names living there
+              items:
+                type: string
+              type: array
+        description: The request body for /addressbook/{address_key}/people
+        required: true
+      responses:
+        200:
+          content:
+            application/json:
+              schema: *id007
+          description: Response for OK
+      tags:
+      - addressbook
   /addressbook/{address_key}/person:
     delete:
       description: delete operation for /addressbook/{address_key}/person
@@ -650,7 +746,7 @@ paths:
       requestBody:
         content:
           application/json:
-            schema: &id007
+            schema: &id008
               $ref: '#/components/schemas/person'
         description: The request body for /addressbook/{address_key}/person
         required: true
@@ -658,7 +754,7 @@ paths:
         201:
           content:
             application/json:
-              schema: *id007
+              schema: *id008
           description: Response for CREATED
       tags:
       - addressbook
@@ -823,7 +919,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id008
+              schema: &id009
                 description: The person's age
                 type: integer
           description: Response for OK
@@ -853,7 +949,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id008
+              schema: *id009
           description: Response for OK
       tags:
       - addressbook
@@ -902,7 +998,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id008
+              schema: *id009
           description: Response for OK
       tags:
       - addressbook
@@ -925,7 +1021,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id009
+              schema: &id010
                 description: The person's first name
                 type: string
           description: Response for OK
@@ -955,7 +1051,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id009
+              schema: *id010
           description: Response for OK
       tags:
       - addressbook
@@ -1004,7 +1100,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id009
+              schema: *id010
           description: Response for OK
       tags:
       - addressbook
@@ -1027,7 +1123,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id010
+              schema: &id011
                 description: The person's hobbies
                 items:
                   type: string
@@ -1059,7 +1155,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id010
+              schema: *id011
           description: Response for OK
       tags:
       - addressbook
@@ -1110,7 +1206,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id010
+              schema: *id011
           description: Response for OK
       tags:
       - addressbook
@@ -1133,7 +1229,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id011
+              schema: &id012
                 description: The person's last name
                 type: string
           description: Response for OK
@@ -1163,7 +1259,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id011
+              schema: *id012
           description: Response for OK
       tags:
       - addressbook
@@ -1212,7 +1308,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id011
+              schema: *id012
           description: Response for OK
       tags:
       - addressbook
@@ -1230,7 +1326,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id012
+              schema: &id013
                 description: The state of this address
                 type: string
           description: Response for OK
@@ -1255,7 +1351,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id012
+              schema: *id013
           description: Response for OK
       tags:
       - addressbook
@@ -1294,7 +1390,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id012
+              schema: *id013
           description: Response for OK
       tags:
       - addressbook
@@ -1312,7 +1408,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id013
+              schema: &id014
                 description: The street and civic number of this address
                 type: string
           description: Response for OK
@@ -1337,7 +1433,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id013
+              schema: *id014
           description: Response for OK
       tags:
       - addressbook
@@ -1376,7 +1472,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id013
+              schema: *id014
           description: Response for OK
       tags:
       - addressbook
@@ -1385,13 +1481,13 @@ paths:
       description: delete operation for /persons
       operationId: persons_delete
       parameters:
-      - &id014
+      - &id015
         description: Limit the number of responses back
         in: query
         name: limit
         schema:
           type: integer
-      - &id015
+      - &id016
         description: The offset to start returning resources
         in: query
         name: offset
@@ -1416,8 +1512,8 @@ paths:
         required: false
         schema:
           type: string
-      - *id014
       - *id015
+      - *id016
       responses:
         200:
           content:
@@ -1433,8 +1529,8 @@ paths:
       description: head operation for /persons
       operationId: persons_head
       parameters:
-      - *id014
       - *id015
+      - *id016
       responses:
         default:
           description: Default HEAD response
@@ -1444,8 +1540,8 @@ paths:
       description: patch operation for /persons
       operationId: persons_patch
       parameters:
-      - *id014
       - *id015
+      - *id016
       responses:
         200:
           content:
@@ -1459,12 +1555,12 @@ paths:
       description: post operation for /persons
       operationId: persons_post
       parameters:
-      - *id014
       - *id015
+      - *id016
       requestBody:
         content:
           application/json:
-            schema: &id016
+            schema: &id017
               $ref: '#/components/schemas/persons'
         description: The request body for /persons
         required: true
@@ -1472,7 +1568,7 @@ paths:
         201:
           content:
             application/json:
-              schema: *id016
+              schema: *id017
           description: Response for CREATED
       tags:
       - persons
@@ -1612,7 +1708,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id017
+              schema: &id018
                 description: The person's age
                 type: integer
           description: Response for OK
@@ -1637,7 +1733,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id017
+              schema: *id018
           description: Response for OK
       tags:
       - persons
@@ -1676,7 +1772,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id017
+              schema: *id018
           description: Response for OK
       tags:
       - persons
@@ -1694,7 +1790,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id018
+              schema: &id019
                 description: The person's first name
                 type: string
           description: Response for OK
@@ -1719,7 +1815,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id018
+              schema: *id019
           description: Response for OK
       tags:
       - persons
@@ -1758,7 +1854,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id018
+              schema: *id019
           description: Response for OK
       tags:
       - persons
@@ -1776,7 +1872,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id019
+              schema: &id020
                 description: The person's hobbies
                 items:
                   type: string
@@ -1803,7 +1899,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id019
+              schema: *id020
           description: Response for OK
       tags:
       - persons
@@ -1844,7 +1940,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id019
+              schema: *id020
           description: Response for OK
       tags:
       - persons
@@ -1862,7 +1958,7 @@ paths:
         200:
           content:
             application/json:
-              schema: &id020
+              schema: &id021
                 description: The person's last name
                 type: string
           description: Response for OK
@@ -1887,7 +1983,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id020
+              schema: *id021
           description: Response for OK
       tags:
       - persons
@@ -1926,7 +2022,7 @@ paths:
         200:
           content:
             application/json:
-              schema: *id020
+              schema: *id021
           description: Response for OK
       tags:
       - persons
